Index: form added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <section>
+        <form action="" id="formBoard">
+            <label for="nameBoard">New board:</label>
+            <input type="text" id="nameBoard">
+            <button type="submit">+</button>
+        </form>
+    </section>
     
 </body>
 </html>
