--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <button type="submit">+</button>
         </form>
     </section>
-    
+    <section>
+        <main></main>
+    </section>
 </body>
 </html>
